style (Header): fix navbar-home class display on mobile device.

--- a/app/components/Styles/Header.css
+++ b/app/components/Styles/Header.css
@@ -103,6 +103,10 @@
     cursor: pointer;
   }
 
+  .navbar-home {
+    display: none;
+  }
+
   .navbar-container {
     display: none;
   }
